left align text on labels, make sure they line up vertically.

--- a/src/htdocs/css/_ObservationMetaView.scss
+++ b/src/htdocs/css/_ObservationMetaView.scss
@@ -13,6 +13,7 @@
 			display: block;
 			font-weight: bold;
 			padding-right: 5px;
+			line-height: 1.9;
 		}
 
 		> input,
@@ -49,7 +50,7 @@
 			> .label {
 				float: left;
 				clear: left;
-				width: 8em;
+				width: 7em;
 				padding-right: 8px;
 			}
 
